--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>定时下载管理</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/NZ-MsgBox.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
@@ -223,6 +224,7 @@
 
     </div>
     <script src="/static/js/jquery-3.7.1.min.js"></script>
+    <script src="/static/js/NZ-MsgBox.min.js"></script>
     <script src="/static/js/app.js"></script>
 </body>
 
